/*
 * This Java source file was generated by the Gradle 'init' task.
 */
package ru.jlexender.se.labstory;

import ru.jlexender.se.labstory.basicClasses.*;
import ru.jlexender.se.labstory.classesList.Place.*;
import ru.jlexender.se.labstory.classesList.Human.*;
import ru.jlexender.se.labstory.classesList.Action.*;
import ru.jlexender.se.labstory.classesList.Item.*;
import ru.jlexender.se.labstory.interfaces.*;
import ru.jlexender.se.labstory.enums.*;

public class App {
    public static void main(String[] args) {
        Book story = new Book();
        story.go();
    }
}
