package ru.jlexender.se.labstory.classesList.Item;

import ru.jlexender.se.labstory.basicClasses.Item;

public class Juice extends Item {
    public Juice() {
        super("juice");
    }
}
