package ru.jlexender.se.labstory.classesList.Place;

import ru.jlexender.se.labstory.basicClasses.Place;

public final class BabyHome extends Place {

    public BabyHome() {
        super("baby's home");
    }
    
}
