package ru.jlexender.se.labstory.utilityClasses;

public final class Printer {
    public static void print(String stringToPrint) {
        System.out.println(stringToPrint);
    }
}
