@startuml
!pragma useIntermediatePackages false

class "Enum" as java.lang.Enum {
}
class "App" as ru.jlexender.se.labstory.App {
  + {static}void main(String[])
}
class "Book" as ru.jlexender.se.labstory.Book {
  #Human karlsson
  #Human baby
  #Human rulle
  #Human fille
  #Human frokenBock
  #Human uncleJulius
  #Porch porch
  #Place rulleHome
  #Place filleHome
  #Place babyHome
  #Glass glass
  #Juice juice
  #Buns buns
  __
  +void go()
}
abstract class "Action" as ru.jlexender.se.labstory.basicClasses.Action {
  -String description
  -Mood mood
  -boolean moodChanging
  __
  ~void applyChanges(Human)
  ~String describe()
}
class "Human" as ru.jlexender.se.labstory.basicClasses.Human {
  -String name
  -Mood mood
  __
  +String getName()
  +Mood getMood()
  ~void setMood(Mood)
  +void doAction(Action)
}
abstract class "Item" as ru.jlexender.se.labstory.basicClasses.Item {
  -String name
  __
  +String getName()
}
abstract class "Liquid" as ru.jlexender.se.labstory.basicClasses.Liquid {
  -String name
  __
  +String getName()
}
abstract class "Place" as ru.jlexender.se.labstory.basicClasses.Place {
  -String name
  -Weather weather
  __
  +String getName()
  +String getWeather()
}
class "Time" as ru.jlexender.se.labstory.basicClasses.Time {
  -int months
  -int years
  __
  +int getMonths()
  +int getYears()
}
class "DoNotListen" as ru.jlexender.se.labstory.classesList.Action.DoNotListen {
  -Human human
  -boolean ignoringAll
  __
  ~String describe()
}
class "DrinkFromItem" as ru.jlexender.se.labstory.classesList.Action.DrinkFromItem {
  -IDrinkingItem item
  __
  ~String describe()
}
class "EatItem" as ru.jlexender.se.labstory.classesList.Action.EatItem {
  -IFood item
  __
  ~String describe()
}
class "ForgotToTell" as ru.jlexender.se.labstory.classesList.Action.ForgotToTell {
  -Human human
  __
  ~String describe()
}
class "GiftItem" as ru.jlexender.se.labstory.classesList.Action.GiftItem {
  -Item item
  -Human human
  -Time time
  #boolean timeAgo
  __
  ~String describe()
}
class "GoingTo" as ru.jlexender.se.labstory.classesList.Action.GoingTo {
  -Place place
  __
  ~String describe()
}
class "HoldItem" as ru.jlexender.se.labstory.classesList.Action.HoldItem {
  -Item item
  __
  ~String describe()
}
class "Lives" as ru.jlexender.se.labstory.classesList.Action.Lives {
  -Place place
  __
  ~String describe()
}
class "PourDrinkingItem" as ru.jlexender.se.labstory.classesList.Action.PourDrinkingItem {
  -IDrinkingItem item
  -Liquid liquid
  __
  ~String describe()
}
class "RollItem" as ru.jlexender.se.labstory.classesList.Action.RollItem {
  -IRollable item
  __
  ~String describe()
}
class "Sit" as ru.jlexender.se.labstory.classesList.Action.Sit {
  -ISeat place
  __
  ~String describe()
}
class "StartThinking" as ru.jlexender.se.labstory.classesList.Action.StartThinking {
  ~String describe()
}
class "StopThinking" as ru.jlexender.se.labstory.classesList.Action.StopThinking {
  ~String describe()
}
class "Tell" as ru.jlexender.se.labstory.classesList.Action.Tell {
  -Human human
  __
  ~String describe()
}
class "Buns" as ru.jlexender.se.labstory.classesList.Item.Buns {
  -String name
}
class "Glass" as ru.jlexender.se.labstory.classesList.Item.Glass {
  -String name
}
class "Juice" as ru.jlexender.se.labstory.classesList.Liquid.Juice {
}
class "BabyHome" as ru.jlexender.se.labstory.classesList.Place.BabyHome {
}
class "FilleHome" as ru.jlexender.se.labstory.classesList.Place.FilleHome {
}
class "Porch" as ru.jlexender.se.labstory.classesList.Place.Porch {
}
class "RulleHome" as ru.jlexender.se.labstory.classesList.Place.RulleHome {
}
enum "Color" as ru.jlexender.se.labstory.enums.Color {
  NONE
  RED
  BLUE
  LIGHTBLUE
  GREEN
  YELLOW
  ORANGE
  PINK
  WHITE
  BLACK
  ..
  -String value
  __
  + {static}Color[] values()
  + {static}Color valueOf(String)
  +String getValue()
}
enum "Mood" as ru.jlexender.se.labstory.enums.Mood {
  NORMAL
  HAPPY
  ANGRY
  SAD
  WORRIED
  ..
  -String value
  __
  + {static}Mood[] values()
  + {static}Mood valueOf(String)
  +String getValue()
}
enum "Weather" as ru.jlexender.se.labstory.enums.Weather {
  CLOUDY
  SUNNY
  SNOWY
  RAINY
  THUNDER
  ..
  -String value
  __
  + {static}Weather[] values()
  + {static}Weather valueOf(String)
  +String getValue()
}
interface "IDrinkingItem" as ru.jlexender.se.labstory.interfaces.IDrinkingItem {
}
interface "IFood" as ru.jlexender.se.labstory.interfaces.IFood {
}
interface "IRollable" as ru.jlexender.se.labstory.interfaces.IRollable {
}
interface "ISeat" as ru.jlexender.se.labstory.interfaces.ISeat {
}
class "Printer" as ru.jlexender.se.labstory.utilityClasses.Printer {
  + {static}void print(String)
}
ru.jlexender.se.labstory.Book --> ru.jlexender.se.labstory.classesList.Place.Porch
ru.jlexender.se.labstory.Book --> ru.jlexender.se.labstory.basicClasses.Human
ru.jlexender.se.labstory.Book --> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.Book --> ru.jlexender.se.labstory.classesList.Item.Buns
ru.jlexender.se.labstory.Book --> ru.jlexender.se.labstory.classesList.Item.Glass
ru.jlexender.se.labstory.Book --> ru.jlexender.se.labstory.classesList.Liquid.Juice
ru.jlexender.se.labstory.basicClasses.Action --> ru.jlexender.se.labstory.enums.Mood
ru.jlexender.se.labstory.basicClasses.Human --> ru.jlexender.se.labstory.enums.Mood
ru.jlexender.se.labstory.basicClasses.Place --> ru.jlexender.se.labstory.enums.Weather
ru.jlexender.se.labstory.classesList.Action.DoNotListen -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.DoNotListen --> ru.jlexender.se.labstory.basicClasses.Human
ru.jlexender.se.labstory.classesList.Action.DrinkFromItem -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.DrinkFromItem --> ru.jlexender.se.labstory.interfaces.IDrinkingItem
ru.jlexender.se.labstory.classesList.Action.EatItem -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.EatItem --> ru.jlexender.se.labstory.interfaces.IFood
ru.jlexender.se.labstory.classesList.Action.ForgotToTell -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.ForgotToTell --> ru.jlexender.se.labstory.basicClasses.Human
ru.jlexender.se.labstory.classesList.Action.GiftItem -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.GiftItem --> ru.jlexender.se.labstory.basicClasses.Time
ru.jlexender.se.labstory.classesList.Action.GiftItem --> ru.jlexender.se.labstory.basicClasses.Human
ru.jlexender.se.labstory.classesList.Action.GiftItem --> ru.jlexender.se.labstory.basicClasses.Item
ru.jlexender.se.labstory.classesList.Action.GoingTo -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.GoingTo --> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.classesList.Action.HoldItem -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.HoldItem --> ru.jlexender.se.labstory.basicClasses.Item
ru.jlexender.se.labstory.classesList.Action.Lives -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.Lives --> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.classesList.Action.PourDrinkingItem -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.PourDrinkingItem --> ru.jlexender.se.labstory.interfaces.IDrinkingItem
ru.jlexender.se.labstory.classesList.Action.PourDrinkingItem --> ru.jlexender.se.labstory.basicClasses.Liquid
ru.jlexender.se.labstory.classesList.Action.RollItem -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.RollItem --> ru.jlexender.se.labstory.interfaces.IRollable
ru.jlexender.se.labstory.classesList.Action.Sit -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.Sit --> ru.jlexender.se.labstory.interfaces.ISeat
ru.jlexender.se.labstory.classesList.Action.StartThinking -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.StopThinking -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.Tell -u-|> ru.jlexender.se.labstory.basicClasses.Action
ru.jlexender.se.labstory.classesList.Action.Tell --> ru.jlexender.se.labstory.basicClasses.Human
ru.jlexender.se.labstory.classesList.Item.Buns -u-|> ru.jlexender.se.labstory.basicClasses.Item
ru.jlexender.se.labstory.classesList.Item.Buns .u.|> ru.jlexender.se.labstory.interfaces.IFood
ru.jlexender.se.labstory.classesList.Item.Buns .u.|> ru.jlexender.se.labstory.interfaces.IRollable
ru.jlexender.se.labstory.classesList.Item.Glass -u-|> ru.jlexender.se.labstory.basicClasses.Item
ru.jlexender.se.labstory.classesList.Item.Glass .u.|> ru.jlexender.se.labstory.interfaces.IRollable
ru.jlexender.se.labstory.classesList.Item.Glass .u.|> ru.jlexender.se.labstory.interfaces.IDrinkingItem
ru.jlexender.se.labstory.classesList.Liquid.Juice -u-|> ru.jlexender.se.labstory.basicClasses.Liquid
ru.jlexender.se.labstory.classesList.Place.BabyHome -u-|> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.classesList.Place.FilleHome -u-|> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.classesList.Place.Porch -u-|> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.classesList.Place.Porch .u.|> ru.jlexender.se.labstory.interfaces.ISeat
ru.jlexender.se.labstory.classesList.Place.RulleHome -u-|> ru.jlexender.se.labstory.basicClasses.Place
ru.jlexender.se.labstory.enums.Color -u-|> java.lang.Enum
ru.jlexender.se.labstory.enums.Mood -u-|> java.lang.Enum
ru.jlexender.se.labstory.enums.Weather -u-|> java.lang.Enum
@enduml
